added get balace route
